--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -12,3 +12,13 @@ ja:
         first_name: 名
         last_name: 姓
         password_confirmation: パスワード確認
+    date:
+      formats:
+        default: '%Y/%m/%d'
+        long: '%Y年%m月%d日(%a)'
+        short: '%m/%d'
+    time:
+      formats:
+        default: "%Y/%m/%d %H:%M:%S"
+        long: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
+        short: "%y/%m/%d %H:%M"
